--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+    "@alan-ai/alan-sdk-web": "^1.8.28",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0", 
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.22.0",
+    "react": "^17.0.2", 
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5", 
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3", 
+    "web-vitals": "^1.0.1" 
+  }, 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
